# actix-demo

./: Cargo.toml  README.md  cert.pem  config.toml  key.pem  log4rs.toml
doc/: diesel.txt  readme.txt
doc/siege/: readme.txt
doc/siege/siege/: Cargo.toml  siege.txt
doc/siege/siege/src/: main.rs
migrations/2020-06-09-022756_create_t_user/: up.sql
public/: index.html  readme.txt
src/: error.rs  handler.rs  main.rs  message.rs  model.rs  models.rs  route.rs  schema.rs
