[package]
name = "stellar"
version = "0.1.0"
authors = ["kk <yike19911102@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.29", features = ["v110"] }
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-web-actors = "2.0.0"
config = "0.10.1"
log4rs = "0.12.0"
diesel = { version = "1.4.4", features = ["mysql"] }