[package]
name = "stellar"
version = "0.1.0"
authors = ["kk <yike19911102@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "chrono"] }
openssl = { version = "0.10.29", features = ["v110"] }
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-web-actors = "2.0.0"
actix = "0.9.0"
config = { version = "0.10.1", features = ["toml"] }
log4rs = { version = "0.12.0", features = ["toml_format"] }
log = "0.4.8"
r2d2 = "0.8.8"
serde = "1.0.111"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }
flatbuffers = "0.6.1"